--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ p {
     padding-top: 25px;
 }
 
-.button, div {
+.startButtonClass, div {
     text-align: center;
     padding-left: 5px;
     padding-right: 5px;
