--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ p {
     text-align: center;
 }
 
-button {
+#startButton {
     text-align: center;
     padding: 15px 20px;
     border: 2px solid white;
@@ -54,21 +54,20 @@ h4 {
     display: none;
 }
 
-.answerButtons {
+  .answerB {  
     text-align: center;
     border: 2px solid white;
     background-color: purple;
     color: white;
-    width:200px;
-    height:70px;
-}
-
-#buttons{
+    width:100px;
+    height:50px;
     display:flex;
     flex-direction:column;
-    height:100px;
-    width:150px;
-  
-    
-   
+ }  
+
+#container3, #container4, #container5, #container6{
+
+
+  display:flex;
+  flex-direction:column;
 }
