--- a/style.css
+++ b/style.css
@@ -35,11 +35,7 @@ h4 {
     font-size: 30px;
 }
 
-
-
-
-
-  .answerB, .correct {  
+/* .answerB, .correct {   
     text-align: center;
     border: 2px solid white;
     background-color: purple;
@@ -48,7 +44,7 @@ h4 {
     height:50px;
     display:flex;
     flex-direction:column;
- }  
+ /* }   
 
 #container3, #container4, #container5, #container6{
 
@@ -60,4 +56,33 @@ h4 {
 .hide{
 
     display:none;
+}
+
+/*  */
+
+.containerQ {
+    margin-top: 50px;
+    border: 2px dotted black;
+    width: 100%;
+    height: 150px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    width: 90px;
+    height: 30px;
+    background-color: purple;
+    color: white;
+    border: 2px solid grey;
+    margin-left: 40%;
+}
+
+.questionsList {
+    display: flex;
+    
+}
+
+.hide {
+    display: none;
 }
