--- a/style.css
+++ b/style.css
@@ -35,39 +35,15 @@ h4 {
     font-size: 30px;
 }
 
-/* .answerB, .correct {   
-    text-align: center;
-    border: 2px solid white;
-    background-color: purple;
-    color: white;
-    width:100px;
-    height:50px;
-    display:flex;
-    flex-direction:column;
- /* }   
 
-#container3, #container4, #container5, #container6{
-
-
-  display:flex;
-  flex-direction:column;
-}
-
-.hide{
-
-    display:none;
-}
-
-/*  */
-
-.containerQ {
+ .containerQ {
     margin-top: 50px;
     border: 2px dotted black;
     width: 100%;
     height: 150px;
 }
 
-/* #buttons { 
+#a-buttons { 
     display: flex;
     flex-direction: column;
     width: 90px;
@@ -76,13 +52,13 @@ h4 {
     color:white;
     border: 2px solid grey;
     margin-left: 40%;
-/* } */
-
+} 
 .questionsList {
     display: flex;
     
 }
 
-.hide {
+ .hide { 
     display: none;
-}
+ } 
+
