--- a/style.css
+++ b/style.css
@@ -17,22 +17,33 @@ body {
     
     height:400px;
     display:flex;
-    justify-content: flex-start;
+    align-items: center;
+   flex-direction:column;
+   /* border: 2px solid black; */
     
 }
 
+.container1{
+display:flex;
+width:100%;
+height:100%;
+justify-content: center;
+/* border: 2px solid black; */
+
+}
 h2{
     text-align:center;
-    float:left;
-    margin-right:20px;
-    margin-top:150px;
+    /* float:left; */
+    
     font-size:30px;
+    
 }
 
 h1{
 
     font-size: 100px;
     text-align:center;
+    margin-top:90px;
 }
 
 p{
@@ -60,6 +71,8 @@ p{
 #answersList{
     display:flex;
     flex-direction:column;
+    /* border: 2px solid black; */
+    justify-content: center;
     
    
     
@@ -91,8 +104,15 @@ h3, h6{
 
 }
 
-#enterInitial{
+#enterInitial :hide{
 
     display:flex;
     flex-direction:column;
+}
+
+#scorepage:hide{
+
+
+
+
 }
