--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ p {
     height: 30px;
     width: 50px;
     border: white;
+    
 }
 
 .bDiv {
@@ -70,7 +71,7 @@ p {
     background-color: purple;
     color: white;
     height: 45px;
-    width: 60px;
+    width: 85px;
     border: white;
     margin-top: 25px;
 }
@@ -93,6 +94,8 @@ h6 {
     border: none;
     height: 30px;
     width: 100px;
+    padding: 15px 32px;
+    text-decoration:none;
 }
 
 #enterInitial {
@@ -136,15 +139,11 @@ h6 {
     justify-content: space-between;
 }
 
-#initialSaver {
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    padding-top: 15px;
-}
+
 
 .lastContainer{
     display:flex;
     flex-direction: column;
     align-items: center;
 }
+
