--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ p {
     height: 30px;
     width: 50px;
     border: white;
-    
 }
 
 .bDiv {
@@ -78,9 +77,7 @@ p {
 
 h3 {
     font-size: 30px;
-    text-align:center;
-   
-  
+    text-align: center;
 }
 
 h6 {
@@ -95,7 +92,7 @@ h6 {
     height: 30px;
     width: 100px;
     padding: 15px 32px;
-    text-decoration:none;
+    text-decoration: none;
 }
 
 #enterInitial {
@@ -139,11 +136,31 @@ h6 {
     justify-content: space-between;
 }
 
-
-
-.lastContainer{
-    display:flex;
+.lastContainer {
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.lastPage {
+    display: flex;
+    justify-content: center;
+}
+
+.clearButton {
+    background-color: purple;
+    color: white;
+    height: 45px;
+    width: 90px;
+    border: white;
+}
+
+#scorelist{
+
+    display:flex;
+    justify-content: center;
+    padding-top:20px;
+    
+    
+
+}
